# DateParserPython

./: .gitignore  LICENSE  README.md  __init__.py  dictionary.py  helper.py  models.py  parser.py  pyproject.toml  test.py
src/dateparserpython/: __init__.py  dictionary.py  display.py  helper.py  parser.py  prediction.py
