[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rm-date-parser"
version = "0.2.0"
description = "Finds every date in text and returns each one with the detected format"
readme = "README.md"
authors = [
  { name = "Vaibhav Singh", email="admin@rationalminds.net" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["date", "parser", "nlp", "datetime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/vbhavsingh/DateParserPython"
Issues = "https://github.com/vbhavsingh/DateParserPython/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dateparserpython = ["py.typed"]
